# mindmap

generator/: main.py  pyproject.toml
visualizer/: package-lock.json  package.json  vite.config.ts
visualizer/app/: layout.tsx  page.tsx
visualizer/components/: Mindmap.tsx  MindmapEditor.tsx  MindmapVisualizer.tsx
visualizer/src/: App.tsx
visualizer/src/components/: ConnectionLines.tsx  GraphNode.tsx  MindMap.tsx  MindMapNode.tsx  NodeDescription.tsx  NodeTooltip.tsx
visualizer/src/components/input/: MindMapInput.tsx
visualizer/src/components/mindmap/: ConnectionLine.tsx  ConnectionLines.tsx  GraphNode.tsx  MindMap.tsx  NodeTooltip.tsx
visualizer/src/data/: meta.json
visualizer/src/data/mindmaps/: ai.txt  webdev.txt
visualizer/src/services/: mindmapService.ts
visualizer/src/types/: mindmap.types.ts
visualizer/src/utils/: colorUtils.ts  layoutUtils.ts  mindmapParser.ts  stringUtils.ts
visualizer/src/utils/layoutUtils/: angleCalculations.ts  calculations.ts  coordinates.ts  index.ts  treeLayout.ts
visualizer/utils/: parseMindmapData.ts
